--- a/src/main/frontend/src/components/layouts/Header.module.scss
+++ b/src/main/frontend/src/components/layouts/Header.module.scss
@@ -1,9 +1,6 @@
-.logoImg {
-  margin-left: 1.875rem;
-}
 .header {
   width: 100%;
-  height: 6.25rem;
+  height: 5.25rem;
   box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.1);
 
   display: flex;
@@ -15,12 +12,16 @@
     height: auto;
   }
 }
-ul {
+.logoImg {
+  margin-left: 1.875rem;
+}
+.navigation > ul {
   display: flex;
   flex-direction: row;
   list-style: none;
   font-size: 1.75rem;
   justify-content: space-between;
+  margin: 0;
   @media screen and (max-width: 768px) {
     margin-top: 1.25rem;
     font-size: 1rem;
