--- a/src/main/frontend/src/components/CheckHeader/CheckHeader.module.scss
+++ b/src/main/frontend/src/components/CheckHeader/CheckHeader.module.scss
@@ -9,15 +9,11 @@
   flex-direction: row;
   font-size: 18px;
 }
-p {
+.pCont > p {
   text-align: center;
 }
 .second {
   margin: 0 70px;
-  color: #aab1b8;
-}
-.third {
-  color: #aab1b8;
 }
 .progressBar {
   width: calc(300px + 10rem);
