--- a/src/main/frontend/src/pages/AP/AP2_timePicker/AP2Main.module.scss
+++ b/src/main/frontend/src/pages/AP/AP2_timePicker/AP2Main.module.scss
@@ -22,4 +22,7 @@
 .rightCont {
   width: calc(100% - 40rem);
   min-height: 100%;
+  position: relative;
+  display: flex;
+  align-items: center;
 }
