--- a/src/main/frontend/src/pages/AP/AP3_placePicker/AP3Left.module.scss
+++ b/src/main/frontend/src/pages/AP/AP3_placePicker/AP3Left.module.scss
@@ -33,4 +33,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-height: 26.5625rem;
+  overflow-y: auto; /* Enable vertical scrolling */
 }
