--- a/src/main/frontend/src/pages/AP/AP6_itinerary/PlanCont.module.scss
+++ b/src/main/frontend/src/pages/AP/AP6_itinerary/PlanCont.module.scss
@@ -11,16 +11,16 @@
 .mainCont {
   display: flex;
   flex-direction: row;
-  margin-top: 30px;
+  margin-top: 1.875rem;
 }
 .makePlanBtn {
   background-color: #8ea05d;
   color: #ffffff;
   border: none;
   border-radius: 0.625rem;
-  font-size: 18px;
-  width: 59px;
-  height: 35px;
+  font-size: 1.125rem;
+  width: 3.6875rem;
+  height: 2.1875rem;
   position: absolute;
   bottom: 1.25rem;
   right: 1.25rem;
