--- a/src/main/frontend/src/pages/AP/AP6_itinerary/AP6Main.module.scss
+++ b/src/main/frontend/src/pages/AP/AP6_itinerary/AP6Main.module.scss
@@ -15,7 +15,7 @@
 .leftHeader {
   display: flex;
   flex-direction: row;
-  margin: 50px auto 14px 0;
+  margin: 3.125rem auto 0.875rem 0;
 }
 .titleArea {
   font-size: 1.75rem;
@@ -29,9 +29,9 @@
   color: #ffffff;
   border: none;
   font-size: 1.125rem;
-  margin: 0 0 0 300px;
-  width: 130px;
-  height: 33px;
+  margin: 0 0 0 18.75rem;
+  width: 8.125rem;
+  height: 2.0625rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -39,7 +39,7 @@
 .showDate {
   color: #aab1b8;
   font-size: 1.125rem;
-  margin: 0 auto 22px 0;
+  margin: 0 auto 1.375rem 0;
   padding-left: 3.875rem;
 }
 .rightCont {
