--- a/src/main/frontend/src/pages/MyTrip/MyTripMain.module.scss
+++ b/src/main/frontend/src/pages/MyTrip/MyTripMain.module.scss
@@ -17,7 +17,7 @@
 }
 .selectedHr {
   width: 100%;
-  height: 2px;
+  height: 0.125rem;
   background-color: #000000;
   border: none;
   margin: 0.3125rem auto;
