--- a/src/main/frontend/src/pages/MyTrip/MyTripHeader.module.scss
+++ b/src/main/frontend/src/pages/MyTrip/MyTripHeader.module.scss
@@ -1,24 +1,24 @@
 .container {
   width: 100%;
-  height: 215px;
+  height: 13.4375rem;
   background-color: #8ea05d;
   display: flex;
   flex-direction: column;
-  padding: 36px 0 0 55px;
+  padding: 2.25rem 0 0 3.4375rem;
 }
 .title {
-  font-size: 30px;
+  font-size: 1.875rem;
   color: #ffffff;
-  margin-bottom: 10px;
+  margin-bottom: 10.625rem;
 }
 .profileCont {
   display: flex;
   flex-direction: row;
   color: #ffffff;
-  font-size: 18px;
+  font-size: 1.125rem;
 }
 .btn {
-  margin-left: 5px;
+  margin-left: 0.3125rem;
   border: none;
   background-color: transparent;
   padding: 0;
@@ -29,5 +29,5 @@
   display: flex;
   flex-direction: row;
   color: #ffffff;
-  font-size: 18px;
+  font-size: 1.125rem;
 }
