Feat: 추가 MyTrip - 장바구니

--- a/src/main/frontend/src/pages/MyTrip/MyTripMain.module.scss
+++ b/src/main/frontend/src/pages/MyTrip/MyTripMain.module.scss
@@ -1,7 +1,7 @@
 .header {
   display: flex;
   font-size: 1.5625rem;
-  margin-top: 1.125rem;
+  margin: 1.125rem 0 0 7.3125rem;
   justify-content: center;
 }
 .headerSub {
