--- a/src/main/frontend/src/pages/MyTrip/Cart.module.scss
+++ b/src/main/frontend/src/pages/MyTrip/Cart.module.scss
@@ -17,6 +17,29 @@
   padding: 0;
   display: flex;
   align-items: center;
+  cursor: pointer;
+  position: relative;
+}
+.tooltip {
+  visibility: hidden;
+  width: 344px;
+  background-color: rgba($color: #000, $alpha: 0.7);
+  color: #fff;
+  text-align: center;
+  border-radius: 5px;
+  padding: 15px 18px;
+  position: absolute;
+  z-index: 1;
+  bottom: -180%;
+  left: 50%;
+  margin-left: -100px;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.questionIcon:hover .tooltip {
+  visibility: visible;
+  opacity: 0.9;
 }
 .mainCont {
   display: flex;
