--- a/src/main/frontend/src/pages/MyTrip/MyTripHeader.module.scss
+++ b/src/main/frontend/src/pages/MyTrip/MyTripHeader.module.scss
@@ -7,7 +7,7 @@
   padding: 2.25rem 0 0 3.4375rem;
 }
 .title {
-  font-size: 1.875rem;
+  font-size: 2.475rem;
   color: #ffffff;
 }
 .profileCont {
@@ -15,6 +15,9 @@
   flex-direction: row;
   color: #ffffff;
   font-size: 1.125rem;
+}
+.subTitle {
+  font-size: 20px;
 }
 .btn {
   margin-left: 0.3125rem;
