--- a/src/main/frontend/src/pages/MyTrip/Plan.module.scss
+++ b/src/main/frontend/src/pages/MyTrip/Plan.module.scss
@@ -8,6 +8,11 @@
   flex-direction: column;
   color: #ffffff;
   padding: 0.9375rem;
+  transition: all 0.3s ease;
+
+  @media (max-width: 1400px) {
+    margin: 0;
+  }
 }
 .whiteX {
   border: none;
@@ -23,7 +28,7 @@
   margin: auto 0 0 0;
 }
 .date {
-  font-size: 1.125rem;
+  font-size: 1rem;
 }
 .areaName {
   font-size: 1.4375rem;
