--- a/src/main/frontend/src/pages/MyTrip/Profile/Profile.module.scss
+++ b/src/main/frontend/src/pages/MyTrip/Profile/Profile.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 35px;
+  margin: 35px 0 150px 0;
 }
 .header {
   display: flex;
@@ -23,13 +23,54 @@
 }
 .profileExplan {
   font-size: 25px;
-  margin-bottom: 20px;
+  margin: 30px 0 10px 0;
 }
 .nicknameCont {
   display: flex;
   flex-direction: column;
+  margin-bottom: 15px;
+}
+.labelTag {
+  font-size: 20px;
+}
+.labelInput {
+  width: 491px;
+  height: 51px;
+  border-radius: 10px;
+  padding-left: 15px;
+  font-size: 20px;
+  border: 1px solid #d5d7db;
+  &:focus {
+    border: 2px solid #8ea05d;
+    outline: none;
+  }
 }
 .emailCont {
   display: flex;
   flex-direction: column;
+  margin-bottom: 10px;
+}
+.deleteId {
+  font-size: 15px;
+  margin-bottom: 20px;
+  margin-left: auto;
+  border: none;
+  background-color: transparent;
+}
+.btnCont {
+  display: flex;
+  flex-direction: row;
+}
+.btn {
+  border: none;
+  background-color: #d9d9d9;
+  font-size: 23px;
+  border-radius: 10px;
+  width: 235px;
+  height: 51px;
+  margin: 0 17px;
+}
+.btn.save {
+  background-color: #8ea05d;
+  color: #ffffff;
 }
