--- a/src/main/frontend/src/pages/MyTrip/Cart/Cart.module.scss
+++ b/src/main/frontend/src/pages/MyTrip/Cart/Cart.module.scss
@@ -22,17 +22,17 @@
 }
 .tooltip {
   visibility: hidden;
-  width: 344px;
+  width: 21.5rem;
   background-color: rgba($color: #000, $alpha: 0.7);
   color: #fff;
   text-align: center;
-  border-radius: 5px;
-  padding: 15px 18px;
+  border-radius: 0.3125rem;
+  padding: 0.9375rem 1.125rem;
   position: absolute;
   z-index: 1;
-  bottom: -180%;
+  bottom: -160%;
   left: 50%;
-  margin-left: -100px;
+  margin-left: -6.25rem;
   opacity: 0;
   transition: opacity 0.3s;
 }
