--- a/src/main/frontend/src/pages/MyTrip/MyTrip.module.scss
+++ b/src/main/frontend/src/pages/MyTrip/MyTrip.module.scss
@@ -27,6 +27,29 @@
   padding: 0;
   display: flex;
   align-items: center;
+  cursor: pointer;
+  position: relative;
+}
+.tooltip {
+  visibility: hidden;
+  width: 23.75rem;
+  background-color: rgba($color: #000, $alpha: 0.7);
+  color: #fff;
+  text-align: center;
+  border-radius: 0.3125rem;
+  padding: 0.9375rem 1.125rem;
+  position: absolute;
+  z-index: 1;
+  bottom: -270%;
+  left: 50%;
+  margin-left: -6.25rem;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.questionIcon:hover .tooltip {
+  visibility: visible;
+  opacity: 0.9;
 }
 .scheduleCont {
   display: flex;
@@ -43,4 +66,16 @@
 }
 .selected {
   color: #000000;
+}
+.noDataBox {
+  width: 80vw;
+  height: 14.0625rem;
+  border-radius: 0.625rem;
+  background-color: #f4f6f7;
+  color: #aab1b8;
+  font-size: 1.25rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 9.375rem;
 }
