--- a/src/main/frontend/src/pages/MyTrip/Profile/DeleteIdModal.module.scss
+++ b/src/main/frontend/src/pages/MyTrip/Profile/DeleteIdModal.module.scss
@@ -1,40 +1,40 @@
 .customModalBody {
-  margin: 30px 30px 0 30px;
+  margin: 1.875rem 1.875rem 0 1.875rem;
   padding: 0;
 }
 .title {
   font-family: 'Jua', serif;
-  font-size: 28px;
-  margin-bottom: 18px;
+  font-size: 1.75rem;
+  margin-bottom: 1.125rem;
 }
 .explain {
   font-family: 'Jua', serif;
-  font-size: 20px;
-  margin-bottom: 18px;
+  font-size: 1.25rem;
+  margin-bottom: 1.125rem;
 }
 .btns {
   display: flex;
   justify-content: center;
-  margin-bottom: 30px;
+  margin-bottom: 1.875rem;
 }
 .cancelBtn {
   border: none;
   background-color: #d9d9d9;
   font-family: 'Jua', serif;
-  font-size: 20px;
-  border-radius: 10px;
-  width: 167px;
-  height: 51px;
-  margin: 0 18px;
+  font-size: 1.25rem;
+  border-radius: 0.625rem;
+  width: 10.4375rem;
+  height: 3.1875rem;
+  margin: 0 1.125rem;
 }
 .deleteIdBtn {
   border: none;
   background-color: #8ea05d;
   font-family: 'Jua', serif;
-  font-size: 20px;
-  border-radius: 10px;
-  width: 167px;
-  height: 51px;
-  margin: 0 18px;
+  font-size: 1.25rem;
+  border-radius: 0.625rem;
+  width: 10.4375rem;
+  height: 3.1875rem;
+  margin: 0 1.125rem;
   color: #ffffff;
 }
