--- a/src/main/frontend/src/pages/MyTrip/Profile/Profile.module.scss
+++ b/src/main/frontend/src/pages/MyTrip/Profile/Profile.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 35px 0 150px 0;
+  margin: 2.1875rem 0 9.375rem 0;
 }
 .header {
   display: flex;
@@ -10,49 +10,49 @@
   align-items: center;
 }
 .profileIcon {
-  width: 80px;
-  height: 80px;
-  margin-bottom: 15px;
+  width: 5rem;
+  height: 5rem;
+  margin-bottom: 0.9375rem;
 }
 .userId {
-  font-size: 25px;
+  font-size: 1.5625rem;
 }
 .main {
   display: flex;
   flex-direction: column;
 }
 .profileExplan {
-  font-size: 25px;
-  margin: 30px 0 10px 0;
+  font-size: 1.5625rem;
+  margin: 1.875rem 0 0.625rem 0;
 }
 .nicknameCont {
   display: flex;
   flex-direction: column;
-  margin-bottom: 15px;
+  margin-bottom: 0.9375rem;
 }
 .labelTag {
-  font-size: 20px;
+  font-size: 1.25rem;
 }
 .labelInput {
-  width: 491px;
-  height: 51px;
-  border-radius: 10px;
-  padding-left: 15px;
-  font-size: 20px;
+  width: 30.6875rem;
+  height: 3.1875rem;
+  border-radius: 0.625rem;
+  padding-left: 0.9375rem;
+  font-size: 1.25rem;
   border: 1px solid #d5d7db;
   &:focus {
-    border: 2px solid #8ea05d;
+    border: 0.125rem solid #8ea05d;
     outline: none;
   }
 }
 .emailCont {
   display: flex;
   flex-direction: column;
-  margin-bottom: 10px;
+  margin-bottom: 0.625rem;
 }
 .deleteId {
-  font-size: 15px;
-  margin-bottom: 20px;
+  font-size: 0.9375rem;
+  margin-bottom: 1.25rem;
   margin-left: auto;
   border: none;
   background-color: transparent;
@@ -64,11 +64,11 @@
 .btn {
   border: none;
   background-color: #d9d9d9;
-  font-size: 23px;
-  border-radius: 10px;
-  width: 235px;
-  height: 51px;
-  margin: 0 17px;
+  font-size: 1.4375rem;
+  border-radius: 0.625rem;
+  width: 14.6875rem;
+  height: 3.1875rem;
+  margin: 0 1.0625rem;
 }
 .btn.save {
   background-color: #8ea05d;
