--- a/src/main/frontend/src/pages/MyTrip/Schedule.module.scss
+++ b/src/main/frontend/src/pages/MyTrip/Schedule.module.scss
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  position: relative;
 }
 
 .tripImg {
@@ -37,6 +38,7 @@
   font-size: 0.9375rem;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .areaName {
@@ -53,6 +55,10 @@
 
 .tripTitle {
   font-size: 1.125rem;
+}
+
+.placeholder {
+  color: #aab1b8;
 }
 
 .edit {
@@ -107,4 +113,24 @@
   margin: 0 1.875rem 0 0;
   border: none;
   background-color: transparent;
+}
+.menu {
+  position: absolute;
+  top: 2.5rem;
+  right: 2rem;
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 0.5rem;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+  z-index: 10;
+  width: 10.0625rem;
+  text-align: center;
+}
+
+.menuItem {
+  padding: 0.75rem 1.5rem;
+  cursor: pointer;
+  &:hover {
+    background-color: #f5f5f5;
+  }
 }
