--- a/src/main/frontend/src/components/Element/Search.module.scss
+++ b/src/main/frontend/src/components/Element/Search.module.scss
@@ -1,7 +1,15 @@
+.search {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+}
+
 .search > p{
   position: absolute;
+  top: 40%;
   left: 50%;
-  top: 20%;
   transform: translate(-50%, -50%);
   height: 24px;
 
@@ -44,10 +52,10 @@
 
 .searchbar > input[type="text"]{
   width: 100%;
-  height: 50%;
+  //height: 50%;
   border: 1px solid #bbb;
   display: block;
   padding: 9px 40px 9px 40px;
   border-radius: 8px;
-  font-size: 14px;
+  font-size: 18px;
 }
