--- a/src/main/frontend/src/pages/AP/AP6_itinerary/AP6Main.module.scss
+++ b/src/main/frontend/src/pages/AP/AP6_itinerary/AP6Main.module.scss
@@ -16,10 +16,11 @@
   display: flex;
   flex-direction: row;
   margin: 3.125rem auto 0.875rem 0;
+  align-items: center;
 }
 .titleArea {
   font-size: 1.75rem;
-  margin: 0 0 0;
+  margin: 0;
   padding-left: 3.875rem;
 }
 .btnCommon {
@@ -29,12 +30,26 @@
   color: #ffffff;
   border: none;
   font-size: 1.125rem;
-  margin: 0 0 0 18.75rem;
-  width: 8.125rem;
+  margin-left: 18.75rem;
+  width: 9rem;
+  padding: 0;
   height: 2.0625rem;
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
+}
+.arrowIcon {
+  margin-left: 0.3rem;
+}
+.modal {
+  width: 100%;
+  background-color: #f4f4f4; /* 회색 배경 */
+  color: #333;
+  padding: 1rem;
+  margin-bottom: 1rem; /* 아래에 여백 추가 */
+  text-align: center;
+  border-radius: 0.625rem; /* 모서리 둥글게 */
 }
 .showDate {
   color: #aab1b8;
