--- a/src/main/frontend/src/pages/AP/AP6_itinerary/DayCont.module.scss
+++ b/src/main/frontend/src/pages/AP/AP6_itinerary/DayCont.module.scss
@@ -1,7 +1,9 @@
 .container {
-  display: flex;
+  display: inline-flex; /* 가로 스크롤 생성을 위해 추가 */
   flex-direction: column;
   margin-right: 1.875rem;
+  width: 50%; /* 화면에 두 개의 DayCont가 잘리지 않도록 너비 설정 */
+  flex: none; /* 고정 너비를 유지 */
 }
 .header {
   display: flex;
@@ -14,5 +16,5 @@
 .date {
   font-size: 0.8125rem;
   color: #aab1b8;
-  margin-left: 8.125rem;
+  margin-left: auto;
 }
