Feat: 수정 AP5 프론트

--- a/src/main/frontend/src/pages/AP/AP5_planList/HotelCont.module.scss
+++ b/src/main/frontend/src/pages/AP/AP5_planList/HotelCont.module.scss
@@ -4,6 +4,7 @@
   align-items: center;
   margin-right: 0.625rem;
 }
+
 .dayBtn {
   background-color: #8ea05d;
   color: #ffffff;
@@ -19,4 +20,13 @@
   height: 3.75rem;
   background-color: #ffffff;
   border-radius: 0.625rem;
+  margin-bottom: 0.3125rem;
+}
+.hotelName {
+  width: 3.75rem;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  text-align: center;
+  font-size: 0.7325rem;
 }
