--- a/src/main/frontend/src/pages/AP/AP5_planList/AP5Main.module.scss
+++ b/src/main/frontend/src/pages/AP/AP5_planList/AP5Main.module.scss
@@ -2,34 +2,100 @@
   min-height: 100vh;
   display: flex;
   flex-direction: row;
+  overflow-x: hidden;
 }
+
 .leftCont {
   width: 40rem;
-  min-height: 100%;
+  // min-height: 100%;
+  min-height: 100vh;
   background-color: #ffffff;
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 1rem;
+  flex: 1;
+  overflow-y: auto;
 }
+
 .cart {
   display: flex;
   flex-direction: row;
-  margin: 2.5rem 33% 1.875rem 0;
+  margin: 2.5rem 33% 0 0;
 }
+
 .title {
   font-size: 1.5625rem;
 }
+
 .questionIcon {
   margin: 0 0.3125rem 0 0.4375rem;
+  margin-left: 0.3125rem;
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  position: relative;
 }
+
+.tooltip {
+  visibility: hidden;
+  width: 21.5rem;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: #fff;
+  text-align: center;
+  border-radius: 0.3125rem;
+  padding: 0.9375rem 1.125rem;
+  position: absolute;
+  z-index: 1;
+  bottom: -200%;
+  left: 50%;
+  margin-left: -6.25rem;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.questionIcon:hover .tooltip {
+  visibility: visible;
+  opacity: 0.9;
+}
+
 .cart > button {
   border: none;
   background-color: #ffffff;
 }
+
 .rightCont {
   width: calc(100% - 40rem);
   min-height: 100%;
   position: relative;
   display: flex;
   align-items: center;
+}
+
+.arrowIcon {
+  cursor: pointer;
+}
+
+.modalContainer {
+  display: flex;
+  flex-direction: row;
+  margin: 1rem 0;
+  overflow-x: auto;
+  white-space: nowrap;
+  width: 100%;
+  flex: 0 0 auto;
+}
+
+.planCont {
+  width: 100%;
+  // height: 100%;
+  // min-height: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 1rem;
+  flex: 1;
 }
