--- a/src/main/frontend/src/pages/AP/AP2_timePicker/TimeTable.module.scss
+++ b/src/main/frontend/src/pages/AP/AP2_timePicker/TimeTable.module.scss
@@ -2,10 +2,61 @@
   margin-left: 0.8125rem;
   font-size: 0.9375rem;
 }
+
 .tableCont {
   text-align: center;
   max-width: 31.25rem;
+  width: 100%;
+  border-collapse: separate;
+  border-spacing: 0;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  overflow: hidden;
+
+  thead {
+    tr {
+      background-color: #8ea05d;
+      color: white;
+    }
+  }
+
+  th,
+  td {
+    padding: 0.3125rem 0;
+    border: 1px solid #ddd;
+  }
+
+  th {
+    border-top: none;
+  }
+
   td {
     padding: 0.3125rem 0;
   }
+
+  tbody tr:last-child td {
+    border-bottom: none;
+  }
+}
+
+.timeCell {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative; /* Positioning for the popup */
+}
+
+.clockIcon {
+  margin-left: 0.3125rem;
+  cursor: pointer; // 커서가 포인터로 바뀌도록 설정
+}
+
+.timePickerPopup {
+  position: absolute;
+  background: white;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  padding: 0.5rem;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+  z-index: 1000; /* Ensures the popup is above other elements */
 }
