--- a/src/main/frontend/src/pages/AP/AP3_placePicker/AP3Left.module.scss
+++ b/src/main/frontend/src/pages/AP/AP3_placePicker/AP3Left.module.scss
@@ -3,6 +3,8 @@
 }
 .left {
   flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 .right {
   flex: 0 0 300px;
@@ -33,6 +35,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-height: 26.5625rem;
-  overflow-y: auto; /* Enable vertical scrolling */
+  // justify-content: center;
+  // width: 65%;
+  max-height: 425px; /* 5개의 PlaceBox 높이에 맞게 픽셀로 설정 */
+  overflow-y: auto; /* 세로 스크롤 활성화 */
+}
+.noResults {
+  color: #aab1b8;
 }
