--- a/src/main/frontend/src/pages/AP/AP3_placePicker/PlaceModal/AddPlaceBox.module.scss
+++ b/src/main/frontend/src/pages/AP/AP3_placePicker/PlaceModal/AddPlaceBox.module.scss
@@ -4,7 +4,7 @@
   align-items: center;
   width: 80%;
   height: 5rem;
-  margin: 0 auto;
+  margin: 0 0 15px 0;
   @media (max-width: 768px) {
     flex-direction: column;
     height: auto;
