Feat: 수정 AP4 프론트

--- a/src/main/frontend/src/pages/AP/AP4_hotelPicker/HotelModal/HotelModal.module.scss
+++ b/src/main/frontend/src/pages/AP/AP4_hotelPicker/HotelModal/HotelModal.module.scss
@@ -3,29 +3,9 @@
   height: 100%;
   background-color: #ffffff;
 }
-.header {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin: 1.875rem 1.25rem 1.5625rem 1.25rem;
-}
-.arrowIcon {
-  width: 2.1875rem;
-}
-.headerCenter {
-  display: flex;
-  flex-direction: row;
-}
-.headerCenter > p {
-  font-size: 1.5625rem;
-  margin: 0 0 0 0.4375rem;
-}
-.subHeader {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin: 0 1.5625rem 1.375rem 1.5625rem;
-  font-size: 1.125rem;
+.total {
+  font-size: 23px;
+  margin: 90px 0 20px 60px;
 }
 .main {
   display: flex;
