--- a/src/main/frontend/src/pages/AP/AP1_pickRegion/Region.module.scss
+++ b/src/main/frontend/src/pages/AP/AP1_pickRegion/Region.module.scss
@@ -6,16 +6,29 @@
   margin: 0 8px 0 8px;
   cursor: pointer;
 }
+
 .selected {
   border: 2px solid #8ea05d;
 }
+
 .regionImg {
   width: 50px;
   height: 50px;
   border-radius: 50%;
   background-color: #d9d9d9;
   margin-bottom: 5px;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
+.image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 .regionName {
   font-family: 'Jua', serif;
   font-size: 15px;
