--- a/src/main/frontend/src/pages/AP/AP3_placePicker/PlaceModal/PlaceModal.module.scss
+++ b/src/main/frontend/src/pages/AP/AP3_placePicker/PlaceModal/PlaceModal.module.scss
@@ -32,3 +32,13 @@
   flex-direction: column;
   align-items: center;
 }
+.noPlaceCont {
+  background-color: #f4f6f7;
+  color: #aab1b8;
+  border-radius: 10px;
+  width: 90%;
+  height: 85px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
