--- a/src/main/frontend/src/pages/AP/AP3_placePicker/PlaceModal/PlaceModalBox.module.scss
+++ b/src/main/frontend/src/pages/AP/AP3_placePicker/PlaceModal/PlaceModalBox.module.scss
@@ -1,24 +1,9 @@
 .container {
-  width: 80%;
+  width: 100%;
   height: 100%;
-  position: relative;
+  position: absolute;
   z-index: 2;
   display: flex;
   flex-direction: row;
-}
-.modalBtn {
-  width: 2.5625rem;
-  height: 3.8125rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #ffffff;
-  border: none;
-  cursor: pointer;
-}
-.modalBtn:hover {
-  background-color: #8ea05d;
-}
-.arrowIcon {
-  width: 2.1875rem;
+  background-color: rgba(255, 255, 255, 0.9);
 }
