--- a/src/main/frontend/src/pages/AP/AP2_timePicker/AP2Main.module.scss
+++ b/src/main/frontend/src/pages/AP/AP2_timePicker/AP2Main.module.scss
@@ -29,7 +29,8 @@
 .buttonContainer {
   position: absolute;
   top: 10px;
-  right: 10px;
+  // left: 10px;
+  // right: 10px;
   z-index: 10;
 }
 .modalBtn {
