--- a/src/main/frontend/src/pages/AP/AP3_placePicker/PlaceModal/AddPlaceBox.module.scss
+++ b/src/main/frontend/src/pages/AP/AP3_placePicker/PlaceModal/AddPlaceBox.module.scss
@@ -45,7 +45,7 @@
   }
 }
 .placeImg {
-  width: 3.75rem;
+  width: 3rem;
   aspect-ratio: 1 / 1;
   border-radius: 0.3125rem;
   background-color: #d9d9d9;
@@ -73,7 +73,7 @@
 .subDetails {
   display: flex;
   flex-direction: row;
-  font-size: 0.625rem;
+  font-size: 0.65rem;
   flex-wrap: nowrap;
   overflow: hidden;
   @media (max-width: 768px) {
@@ -88,7 +88,7 @@
   text-overflow: ellipsis;
 }
 .address {
-  margin-left: 0.8125rem;
+  margin-left: 0.5125rem;
   color: #aab1b8;
   white-space: nowrap;
   overflow: hidden;
@@ -109,11 +109,13 @@
   }
 }
 #editBtn {
-  font-size: 0.6875rem;
+  font-size: 0.55rem;
   background-color: #8ea05d;
   border: none;
   border-radius: 1.25rem;
   margin: 0.125rem 0;
+  width: 3.6875rem;
+  height: 1.5625rem;
   @media (max-width: 768px) {
     margin: 0 0.5rem;
   }
