--- a/src/main/frontend/src/pages/AP/AP3_placePicker/PlaceModal/AddPlaceBox.module.scss
+++ b/src/main/frontend/src/pages/AP/AP3_placePicker/PlaceModal/AddPlaceBox.module.scss
@@ -31,6 +31,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: center;
   width: calc(100% - 3.25rem);
   height: 100%;
   background-color: #ffffff;
@@ -108,6 +109,15 @@
     margin-top: 1rem;
   }
 }
+.editContainer {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+.editLabel {
+  font-size: 0.75rem;
+  margin-right: 0.5rem;
+}
 #editBtn {
   font-size: 0.55rem;
   background-color: #8ea05d;
@@ -120,6 +130,24 @@
     margin: 0 0.5rem;
   }
 }
+#saveBtn {
+  font-size: 0.55rem;
+  background-color: #8ea05d;
+  border: none;
+  border-radius: 1.25rem;
+  margin: 0.125rem 0;
+  width: 3.6875rem;
+  height: 1.5625rem;
+}
+#cancelBtn {
+  font-size: 0.55rem;
+  background-color: #aab1b8;
+  border: none;
+  border-radius: 1.25rem;
+  margin: 0.125rem 0;
+  width: 3.6875rem;
+  height: 1.5625rem;
+}
 .trashIcon {
   width: 1.5rem;
   height: 1.5rem;
@@ -127,4 +155,10 @@
   @media (max-width: 768px) {
     margin: 1rem 0 0 0;
   }
+}
+.durationInput {
+  width: 4rem;
+  padding: 0.2rem;
+  border: 1px solid #aab1b8;
+  border-radius: 0.5rem;
 }
