Feat: 추가 보안 설정 & AP3Left 데이터 포탈 연동 수정

--- a/src/main/frontend/src/pages/AP/AP3_placePicker/PlaceBox.module.scss
+++ b/src/main/frontend/src/pages/AP/AP3_placePicker/PlaceBox.module.scss
@@ -12,6 +12,8 @@
   background-color: #d9d9d9;
   border-radius: 5px;
   margin: 0 14px 0 21px;
+  background-size: cover;
+  background-position: center;
 }
 .detailsCont {
   display: flex;
