--- a/src/main/frontend/src/pages/AP/AP3_placePicker/PlaceModal/AddPlaceBox.module.scss
+++ b/src/main/frontend/src/pages/AP/AP3_placePicker/PlaceModal/AddPlaceBox.module.scss
@@ -45,16 +45,29 @@
     padding: 1rem;
   }
 }
+// .placeImg {
+//   width: 3rem;
+//   aspect-ratio: 1 / 1;
+//   border-radius: 0.3125rem;
+//   background-color: #d9d9d9;
+//   margin: 0 0.625rem;
+//   @media (max-width: 768px) {
+//     margin: 0 0 1rem 0;
+//   }
+// }
 .placeImg {
   width: 3rem;
   aspect-ratio: 1 / 1;
   border-radius: 0.3125rem;
   background-color: #d9d9d9;
+  background-size: cover;
+  background-position: center;
   margin: 0 0.625rem;
   @media (max-width: 768px) {
     margin: 0 0 1rem 0;
   }
 }
+
 .detailsCont {
   display: flex;
   flex-direction: column;
