Feat: AP4 데이터 추가 전 구현 & 총 일수 수정

--- a/src/main/frontend/src/pages/AP/AP4_hotelPicker/HotelModal/AddHotelBox.module.scss
+++ b/src/main/frontend/src/pages/AP/AP4_hotelPicker/HotelModal/AddHotelBox.module.scss
@@ -44,7 +44,7 @@
     padding: 1rem;
   }
 }
-.placeImg {
+.beforeAddHotelImg {
   width: 3.75rem;
   aspect-ratio: 1 / 1;
   border-radius: 0.3125rem;
