--- a/src/main/frontend/src/pages/AP/AP4_hotelPicker/HotelBox.module.scss
+++ b/src/main/frontend/src/pages/AP/AP4_hotelPicker/HotelBox.module.scss
@@ -12,6 +12,8 @@
   background-color: #d9d9d9;
   border-radius: 5px;
   margin: 0 14px 0 21px;
+  background-size: cover;
+  background-position: center;
 }
 .detailsCont {
   display: flex;
