Feat: AP4Left 모달 데이터 연결

--- a/src/main/frontend/src/pages/AP/AP4_hotelPicker/HotelDatePickModal/HotelCont.module.scss
+++ b/src/main/frontend/src/pages/AP/AP4_hotelPicker/HotelDatePickModal/HotelCont.module.scss
@@ -19,6 +19,7 @@
 }
 .btn {
   border: none;
+  border-radius: 10px;
   padding: none;
   margin: 0 0 10px 0;
   background-color: transparent;
@@ -27,11 +28,8 @@
 .addBtnIcon {
   width: 80px;
   height: 80px;
+  border-radius: 10px;
 }
 .hotelName {
   font-size: 18px;
-}
-.selected {
-  background-color: #8ea05d;
-  border-radius: 50%;
 }
