--- a/src/main/frontend/src/pages/AP/AP5_planList/PlaceCont.module.scss
+++ b/src/main/frontend/src/pages/AP/AP5_planList/PlaceCont.module.scss
@@ -4,13 +4,23 @@
   align-items: center;
   margin-right: 0.625rem;
 }
+
 .imgCont {
   width: 3.75rem;
   height: 3.75rem;
   background-color: #ffffff;
   border-radius: 0.625rem;
   margin-bottom: 0.3125rem;
+  overflow: hidden; /* 추가: 이미지가 넘치지 않도록 */
 }
+
+.image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* 추가: 이미지가 컨테이너 크기에 맞게 조절되도록 */
+  border-radius: 0.625rem; /* 추가: 이미지에도 동일한 border-radius 적용 */
+}
+
 .placeName {
   width: 3.75rem;
   white-space: nowrap;
