Feat: 문제 해결 유저 리프레시 토큰

--- a/src/main/frontend/src/pages/MyTrip/Profile/Profile.module.scss
+++ b/src/main/frontend/src/pages/MyTrip/Profile/Profile.module.scss
@@ -57,6 +57,13 @@
   border: none;
   background-color: transparent;
 }
+.logoutId {
+  font-size: 0.9375rem;
+  margin-bottom: 1.25rem;
+  margin-left: auto;
+  border: none;
+  background-color: transparent;
+}
 .btnCont {
   display: flex;
   flex-direction: row;
