--- a/src/main/frontend/src/pages/Community/CommunityBox.module.scss
+++ b/src/main/frontend/src/pages/Community/CommunityBox.module.scss
@@ -31,6 +31,12 @@
   flex-direction: column;
 }
 
+.info p {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .date {
   margin: 5px 10px 5px 5px;
 }
