--- a/src/main/frontend/src/pages/Community/CommunityDetailPlan.module.scss
+++ b/src/main/frontend/src/pages/Community/CommunityDetailPlan.module.scss
@@ -9,12 +9,14 @@ h3 {
   margin: 30px auto;
 }
 
-.map {
+.mapContainer {
+  position: relative;
   display: flex;
-  width: 50%;
-  height: 80%;
-  justify-content: center;
-  padding: 0 10px;
+  align-self: center;
+  justify-self: center;
+  min-width: 550px;
+  min-height: 500px;
+  margin-right: 30px;
 }
 
 .info {
