--- a/src/main/frontend/src/pages/Community/CommunityMainPage.module.scss
+++ b/src/main/frontend/src/pages/Community/CommunityMainPage.module.scss
@@ -25,6 +25,52 @@
   border-radius: 5px;
 }
 
+.postModal {
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.postModal h3 {
+  font-size: 30px;
+}
+
+.carouselContainer {
+  margin-top: 15px;
+  flex: 1;
+}
+
+.planContainer {
+  width: 75%;
+  height: 180px;
+  background-color: #8ea05d;
+  border-radius: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: left;
+}
+
+.planImage {
+  width: 40%;
+  height: 80%;
+  margin: 15px;
+  background-color: transparent;
+  border-radius: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.planImage img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.planInfo {
+  flex: 1;
+}
+
 .container {
   display: flex;
   flex-direction: column;
@@ -44,10 +90,6 @@
   padding: 0 10px;
   font-size: 16px;
   background-color: transparent;
-
-}
-
-.orderButtons{
 
 }
 
@@ -77,7 +119,6 @@
 .dropdown,
 .regionDropdown {
   position: absolute;
-  top: 180px;
   background: #fff;
   border: 1px solid #ccc;
   max-height: 200px;
@@ -87,23 +128,39 @@
 
 .dropdown {
   width: 100px;
-  right: 17.5%;
+  transform: translateY(-100%); /* Position above the button */
+  margin-top: -45px; /* Adjust the gap between button and dropdown */
+  margin-left: 10px;
+}
+
+.dropSelected {
+  background-color: #f0f0f0;
+  border-radius: 5px;
 }
 
 .regionDropdown {
   display: flex;
+  transform: translateX(-60%) translateY(-100%); /* Position above the button */
+  margin-top: -45px; /* Adjust the gap between button and dropdown */
+  margin-left: 10px;
+  width: auto;
 }
 
 .regionList {
   min-width: 150px;
+  overflow-y: scroll;
+  flex: 1;
 }
 
 .subRegionList {
   min-width: 150px;
+  overflow-y: scroll;
+  flex: 1;
 }
 
 .dropdown div,
-.regionDropdown div {
+.regionList div,
+.subRegionList div{
   padding: 10px;
   cursor: pointer;
 }
