--- a/src/main/frontend/src/pages/AP/AP6_itinerary/AP6Main.module.scss
+++ b/src/main/frontend/src/pages/AP/AP6_itinerary/AP6Main.module.scss
@@ -12,17 +12,22 @@
   flex-direction: column;
   align-items: center;
 }
+
 .leftHeader {
   display: flex;
   flex-direction: row;
-  margin: 3.125rem auto 0.875rem 0;
+  justify-content: space-between;
+  margin: 3.125rem 1rem 0.875rem 0;
   align-items: center;
+  width: 100%; /* 전체 너비로 확장 */
+  padding: 0 3.875rem; /* 좌우 여백 추가 */
 }
+
 .titleArea {
   font-size: 1.75rem;
   margin: 0;
-  padding-left: 3.875rem;
 }
+
 .btnCommon {
   border-radius: 0.625rem;
   font-family: 'Jua', serif;
@@ -30,7 +35,6 @@
   color: #ffffff;
   border: none;
   font-size: 1.125rem;
-  margin-left: 18.75rem;
   width: 9rem;
   padding: 0;
   height: 2.0625rem;
@@ -39,9 +43,11 @@
   align-items: center;
   position: relative;
 }
+
 .arrowIcon {
   margin-left: 0.3rem;
 }
+
 .modal {
   width: 100%;
   background-color: #f4f4f4; /* 회색 배경 */
@@ -51,12 +57,14 @@
   text-align: center;
   border-radius: 0.625rem; /* 모서리 둥글게 */
 }
+
 .showDate {
   color: #aab1b8;
   font-size: 1.125rem;
   margin: 0 auto 1.375rem 0;
   padding-left: 3.875rem;
 }
+
 .rightCont {
   width: calc(100% - 40rem);
   min-height: 100%;
