Feat: 수정 AP1 디자인g

--- a/src/main/frontend/src/pages/AP/AP1_pickRegion/AreaBtn.module.scss
+++ b/src/main/frontend/src/pages/AP/AP1_pickRegion/AreaBtn.module.scss
@@ -4,8 +4,8 @@
   border-radius: 0.625rem;
   font-family: 'Jua', serif;
   font-size: 1rem;
-  margin: 0 0.5rem;
-  width: 4.875rem;
+  margin: 0.3rem 0.5rem;
+  // width: 4.875rem;
   height: 2rem;
 }
 .selected {
