--- a/src/main/frontend/src/pages/AP/AP1_pickRegion/PickRegionModal.module.scss
+++ b/src/main/frontend/src/pages/AP/AP1_pickRegion/PickRegionModal.module.scss
@@ -31,7 +31,8 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  margin-bottom: 18.125rem;
+  flex-wrap: wrap; /* 추가된 속성 */
+  margin: 0 0 18.125rem 0;
 }
 #nextBtn {
   background-color: #8ea05d;
