--- a/src/main/frontend/src/pages/AP/AP4_hotelPicker/HotelDatePickModal/HotelDatePickModal.module.scss
+++ b/src/main/frontend/src/pages/AP/AP4_hotelPicker/HotelDatePickModal/HotelDatePickModal.module.scss
@@ -22,6 +22,7 @@
   font-size: 25px;
 }
 .hotelsCont {
+  width: 50%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center; // 추가: 중앙 정렬
