--- a/src/main/frontend/src/pages/Community/CommunityDetailPlan.module.scss
+++ b/src/main/frontend/src/pages/Community/CommunityDetailPlan.module.scss
@@ -12,10 +12,9 @@ h3 {
 .mapContainer {
   position: relative;
   display: flex;
-  align-self: center;
   justify-self: center;
-  min-width: 550px;
-  min-height: 500px;
+  width: 550px;
+  height: 500px;
   margin-right: 30px;
 }
 
