--- a/src/main/frontend/src/pages/AP/AP6_itinerary/GoMyTripModal.module.scss
+++ b/src/main/frontend/src/pages/AP/AP6_itinerary/GoMyTripModal.module.scss
@@ -8,6 +8,9 @@
   flex-direction: column;
   align-items: center;
   font-family: 'Jua', serif;
+  font-size: 38px;
+}
+.content > p {
   font-size: 28px;
 }
 .btnCont {
