--- a/src/main/frontend/src/pages/Community/ScheduleItem.module.scss
+++ b/src/main/frontend/src/pages/Community/ScheduleItem.module.scss
@@ -31,6 +31,11 @@
   padding: 10px;
 }
 
+.scheduleImage img {
+  width: 50px;
+  height: 50px;
+}
+
 .scheduleInfo {
   flex: 1;
   padding: 10px;
@@ -48,6 +53,7 @@
 
 .scheduleTime {
   padding: 0 15px;
+  width: 30%;
 }
 
 .scheduleTime p {
